nova_tests/negative_capability/cfg_unknown_key_rejected.nv
// EXPECT_COMPILE_ERROR unknown #cfg key
//
// Plan 42.12 Ф.2: парсер должен reject'ить unknown #cfg keys.
// Допустимо только `feature` и `target_os`. Здесь `nonsense` —
// должен дать parse error «unknown #cfg key `nonsense`».

#cfg(nonsense = "foo")
module negative_capability.cfg_unknown_key_rejected

test "unknown cfg key rejected at parse" {
    assert(true)
}
